<resources>
    <string name="app_name">سرآشپز چیلی</string>
    <string name="font">font/IRANSans.ttf</string>
    <string name="name">نام</string>
    <string name="email">ایمیل</string>
    <string name="register_rule">شرایط استفاده</string>
    <string name="LoginOrRegister">ورود/ ثبت نام</string>
    <string name="drawer_open">باز شدن منو</string>
    <string name="drawer_close">بسته شدن منو</string>
    <string name="categories">دسته بندی ها</string>
    <string name="drawer_offer">چی بپزم؟</string>
    <string name="recipe_offer_notes">نکات آشپزی</string>
    <string name="Social">اشتراک گذاری</string>
    <string name="recipe_favorite">لیست علاقمندی های من</string>
    <string name="shared">اشتراک گذاری شده ها</string>
    <string name="chef_wht">چی بپزم؟</string>
    <string name="send_recipe">افزودن دستور پخت</string>
    <string name="send_pic">افزودن عکس غذا</string>
    <string name="support">تیم توسعه دهنده</string>
    <string name="HostName">http://Ashpazchili.ir/</string>
    <string name="UrlBase">Chili/</string>
    <string name="introduction">این اپلیکیشن به صورت اختصاصی در تمام زمینه‌های مورد نیاز "آشپزی" در بستر اندروید ساخته شده است. این برنامه توسط مرکز رشد دانشگاه آزاد اسلامی توسعه داده شده است. مطالب این برنامه جامع بوده و آشپزی لذت‌بخشی را برایتان مهیا می‌سازد.
درصورت مواجهه با هرگونه مشکل و یا وارد دانستن هرگونه ایرادی به هر بخش این برنامه، ما را مطلع کرده تا در ارتقا سطح کیفی برنامه کمک شایانی کرده باشید.
اگر مایل به هرگونه همکاری با ما هستید از طریق راه‌های ارتباطی با ما در ارتباط باشید.
</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keyword_search">کلمه مورد نظر خود را بنویسید</string>
    <string name="typeFood">براساس نوع غذا</string>
    <string name="valueBase">براساس ارزش غذایی</string>
    <string name="events">براساس مناسبت</string>
    <string name="userName">نام کاربر</string>
    <string name="following">دنبال شونده</string>
    <string name="follower">دنبال کننده</string>
    <string name="score">امتیاز</string>
    <string name="tradition">سنتی</string>
    <string name="appetizer">پیش غذا</string>
    <string name="desert">دسر</string>
    <string name="drink">نوشیدنی</string>
    <string name="cake">شیرینی</string>
    <string name="others">متفرقه</string>
    <string name="myFavorite">علاقمندی های من</string>
    <string name="bestRecipes">بهترین دستورپخت ها</string>
    <string name="recentRecipes">دستور پخت های اخیر</string>
    <string name="recipes">دستور پخت</string>
    <string name="gallery">تصاویر</string>
    <string name="users">کاربران</string>
    <string name="search">جستجو</string>
    <string name="add_newItem">افزودن مورد جدید</string>
    <string name="Title">عنوان</string>
    <string name="amount">مقدار</string>
    <string name="unit">واحد</string>
    <string name="add">افزودن</string>
    <string name="enter">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="password">کلمه عبور</string>
    <string name="rule">شرایط استفاده</string>
    <string name="editProfile">ویرایش پروفایل</string>
    <string name="newPassword">کلمه عبور جدید</string>
    <string name="fat">چربی دارم</string>
    <string name="sugar">قند دارم</string>
    <string name="save">ثبت</string>
    <string name="addImage">افزودن تصویر</string>
    <string name="imageTitle">عنوان تصویر</string>
    <string name="description">توضیحات</string>
    <string name="recipe_title">عنوان غذا</string>
    <string name="suitableFor">مناسب برای</string>
    <string name="timeToCook">مدت زمان پخت</string>
    <string name="minute">دقیقه</string>
    <string name="forgetPassword">رمز عبور خود را فراموش کرده اید؟</string>
    <string name="Disconnect">اتصال به اینترنت برقرار نمی باشد</string>
    <string name="report">گزارش</string>
    <string name="ingredient">مواد اولیه</string>
    <string name="addRecipe">افزودن دستور</string>
    <string name="recipeRules">قوانین اشتراک گذاری دستور پخت</string>
    <string name="difficulty">درجه سختی</string>
    <string name="favorite">علاقمندی من</string>
    <string name="newRecipes">جدیدترین ها</string>
    <string name="bestRecipe">بهترین ها</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="databasePath">/data/data/com.ict.chilichef/databases/foodapp.db</string>
    <string name="logOutProfile">خروج از حساب کاربری</string>
    <string name="followers">دنبال کننده ها</string>
    <string name="add_newIngredient">افزودن ماده غذایی جدید</string>
    <string name="foodList">مشاهده لیست غذا ها</string>
    <string name="delete_comment">حذف پیام</string>
    <string name="modern">مدرن</string>
    <string name="design_food">سرآشپز با سلیقه</string>
    <string name="design_chef">با سلیقه</string>
    <string name="fruit">میوه آرایی</string>
    <string name="food">غذا آرایی</string>
    <string name="table">میز آرایی</string>
    <string name="sendComment">ارسال نظر</string>
    <string name="sharedRecipes">اشتراک گذاری دستور پخت</string>
    <string name="sharedPic">اشتراک گذاری تصویر غذا</string>
    <string name="checkNetwork">لطفا اتصال به اینترنت را بررسی کنید</string>
    <string name="mobile">شماره همراه</string>
    <string name="plzLogIn">لطفا به حساب کاربری خود وارد شوید</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="noComment">نظری وجود ندارد!</string>
    <string name="emptyList">لیست خالی است!</string>
    <string name="empty">موردی یافت نشد!</string>
    <string name="dialog_close">بستن</string>
    <string name="emailActive">ایمیل شما تایید نشده است، لطفا با مراجعه به آدرس ایمیل خود از طریق لینک فعالسازی آن را فعال کنید.</string>
    <string name="lenght">قد:</string>
    <string name="resentActiveLink">ارسال مجدد لینک فعالسازی</string>
    <string name="weight">وزن:</string>
    <string name="home">خانه</string>
    <string name="reasonReport">علت گزارش:</string>
    <string name="reportSend">ارسال گزارش</string>
    <string name="enterIng">ماده اولیه را وارد کنید</string>
    <string name="rules_register">*لطفاً از آدرس ایمیلی استفاده کنید که درصورت فراموشی رمز عبور بتوانید رمز را بازیابی نمائید.\n\n*با هر آدرس ایمیل فقط یکبار می‌توانید ثبت‌نام کنید.\n\n*از اسامی استفاده کنید که با شئونات اسلامی مغایرت نداشته باشد.</string>
    <string name="rules_send_image">*لطفاً دقیقاً اسم غذایی را که از روی دستورالعمل آن این غذا را تهیه کردید قرار دهید، چون فقط با یکی بودن نام آن‌ها غذای شما در لیست تصاویر مرتبط قرار خواهد گرفت.\n\n*در قسمت توضیحات توضیح مختصری در رابطه با این غذا بنویسید؛ اگر توضیحی که قرار است بنویسید در خود دستورپخت غذا ذکر نشده بود.\n\n*لطفاً عکسی که قرار می‌دهید دارای کیفیت بالا و فاقد آرم و یا لوگو باشد، درغیر این صورت مجبور به برداشتن آن می‌شویم.</string>
    <string name="rules_send_recipes">*لطفاً دقت لازم را در نوشتن اسم غذا به کار ببرید.\n\n*اگر غذا مربوط به شهر خاصی است، اسم شهر حتماً ذکر شود.\n\n*توضیحات جامع باشند و گام به گام همه نکات گفته شود.\n*به مدت زمان پخت دقت فرمائید که براساس دقیقه است.\n\n*لطفاً عکسی که قرار می‌دهید دارای کیفیت بالا و فاقد آرم و یا لوگو باشد؛ درغیر این صورت مجبور به برداشتن آن می‌شویم.\n*نکاتی که میخ‌خوهید ذکر کنید در آخر دستورپخت خود قرار دهید.\n\n*پس از ثبت، دستورپخت برای تأیید، بررسی نهایی و یک سری تغییرات برای اپراتورهای ما ارسال می‌شوند و بعد از 24 الی 72 ساعت به اسم کاربری خودتان در اپلیکیشن قرار داده می‌شود.</string>
    <string name="arm_email">datis.co.info@gmail.com</string>

</resources>
