<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/add_ingredient_pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/add_newItem"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/add_ingredient_closeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close" />

    <EditText
        android:id="@+id/add_ingredient_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_ingredient_pageTitle"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:hint="@string/Title"
        android:inputType="text"
        android:maxLength="50"


        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#FCC534" />

    <EditText
        android:id="@+id/add_ingredient_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add_ingredient_unit"
        android:layout_below="@id/add_ingredient_Title"
        android:drawablePadding="10dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:hint="@string/amount"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#FCC534" />

    <EditText
        android:id="@+id/add_ingredient_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_ingredient_number"
        android:drawablePadding="10dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:hint="@string/unit"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#FCC534" />

    <Button
        android:id="@+id/add_ingredient_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_ingredient_unit"
        android:background="@drawable/shape_button"
        android:padding="10dp"
        android:text="@string/add"
        android:textColor="#A05633"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>


</RelativeLayout>