<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:padding="30dp">

    <ImageButton
        android:id="@+id/login_closeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close" />

    <ImageView
        android:id="@+id/login_Image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/login_closeIcon"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_chiiibepazam" />

    <LinearLayout
        android:id="@+id/login_registerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_Image"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login"
            style="@style/AllText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="@string/enter"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/register"
            style="@style/AllText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register" />

    </LinearLayout>


    <EditText
        android:id="@+id/login_name"
        style="@style/AllText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_registerLayout"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_chef"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="@color/light_gray" />

    <EditText
        android:id="@+id/login_email"
        style="@style/AllText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_name"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email_simple"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="@color/light_gray" />


    <LinearLayout
        android:id="@+id/linearPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/login_password"
            style="@style/AllText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:drawableStart="@drawable/ic_key"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textCursorDrawable="@drawable/color_cursor"
            android:backgroundTint="@color/light_gray" />

        <ImageButton
            android:id="@+id/loginShowPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_show_key_enter" />


    </LinearLayout>

    <!--<EditText-->
    <!--android:id="@+id/login_password"-->
    <!--style="@style/AllText"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/login_email"-->
    <!--android:drawableEnd="@drawable/ic_show_key"-->
    <!--android:drawablePadding="10dp"-->
    <!--android:drawableStart="@drawable/ic_key"-->
    <!--android:hint="@string/password"-->
    <!--android:inputType="textPassword"-->
    <!--android:maxLines="1"-->
    <!--android:textAlignment="viewStart"-->
    <!--android:textColor="@color/colorPrimary" />-->

    <LinearLayout
        android:id="@+id/login_rules_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearPassword"
        android:orientation="horizontal"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/login_rules_checkBox"
            style="@style/AllText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/login_rules_textView"
            style="@style/AllText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule" />


    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/AllText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_rules_layout"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_button"
        android:text="@string/enter"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/login_forgetPassword"
        style="@style/AllText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/forgetPassword"
        android:textColor="@color/colorAccent" />

</RelativeLayout>