<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Toolbar_Categories"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:padding="5dp"
    android:background="@drawable/background_radius"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:id="@+id/LinearFoodType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/TV_typeFoodType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_salad"
                android:text="@string/appetizer"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <View
            android:id="@+id/View1"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"

            android:background="@color/dark_gray" />

        <LinearLayout
            android:id="@+id/LinearTradition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_typeFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_food"
                android:text="@string/tradition"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <View
            android:id="@+id/View2"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            android:background="@color/dark_gray" />

        <LinearLayout
            android:id="@+id/LinearModern"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_Others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_modern_food"
                android:text="@string/modern"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <View
            android:id="@+id/View5"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="@color/dark_gray" />


        <LinearLayout
            android:id="@+id/LinearDesert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_Desert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_deser"
                android:text="@string/desert"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <View
            android:id="@+id/View3"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="@color/dark_gray" />


        <LinearLayout
            android:id="@+id/LinearCake"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_Cake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_cake"
                android:text="@string/cake"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <View
            android:id="@+id/View4"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="@color/dark_gray" />

        <LinearLayout
            android:id="@+id/LinearDrink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_Drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_soda"
                android:text="@string/drink"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.Toolbar>