<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:padding="10dp">

    <TextView
        android:id="@+id/adding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/add_newIngredient"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/dialog_closeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adding_title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/dialog_ETX_search_IngName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:hint="@string/enterIng"
                android:maxLines="1"
                android:singleLine="true" />


            <ImageButton
                android:id="@+id/dialog_search_IngName_ImgBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search" />

        </LinearLayout>

        <Button
            android:id="@+id/Dialog_Add_Ing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_button"
            android:text="@string/add"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/Propose_Ingredient_Recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>