<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".NavigationItems.ImageSendActivity">

    <include
        layout="@layout/toolbar_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_send_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="#66dadada" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/addImage"
                android:textColor="@color/colorAccent"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/image_send_gal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="3dp"
                    android:src="@drawable/ic_gallery" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorAccent"
                    android:padding="3dp" />

                <ImageButton
                    android:id="@+id/image_send_cam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="3dp"
                    android:src="@drawable/ic_camera" />

            </LinearLayout>

            <EditText
                android:id="@+id/image_send_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imageTitle"
                android:inputType="text"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <EditText
                android:id="@+id/image_send_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textCursorDrawable="@drawable/color_cursor"/>

            <LinearLayout
                android:id="@+id/ImageSend_rules_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/ImageSend_rules_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:buttonTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/ImageSend_rules_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rule"
                    android:textColor="@color/colorAccent"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/ImageSend_addImage_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_button"
                android:text="@string/addImage"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
